New server probe toll and clean up.

--- a/packages/pirads-measurements/client/components/measurementTable/measurementTableView/measurementTableView.styl
+++ b/packages/pirads-measurements/client/components/measurementTable/measurementTableView/measurementTableView.styl
@@ -94,6 +94,15 @@
     .text-color
       color: yellow
 
+    .text-color-red
+      color: red
+
+    .text-color-green
+      color: green
+
+    .text-color-yellow
+      color: yellow
+
   .report-area
     margin-top: 2px
     padding: 10px 0
