--- a/packages/tesseract-report/client/components/measurementTable/measurementTableView/measurementTableView.html
+++ b/packages/tesseract-report/client/components/measurementTable/measurementTableView/measurementTableView.html
@@ -1,5 +1,9 @@
 <template name="measurementTableView">
-    <div class="{{#if not isFeedbackActive}}hidden{{/if}}">
+    <div class="{{#if not isResultActive}}hidden{{/if}}">
+        <hr style="margin-top:0;">
+        <div id="feedback-section"></div>
+    </div>
+    {{#if isFeedbackActive}}
         {{>measurementTableHeaderRow (clone this)}}
         {{#each rowItem in fiducials}}
             {{>measurementTableRow (clone this rowItem=rowItem)}}
@@ -7,7 +11,7 @@
         {{#if fiducials}}
             <div class="form-group col-sm-12 custom-textarea">
                 <label for="fid-comment-{{rowItem.id}}">Comment (optional)</label>
-                <textarea id="fid-comment-{{rowItem.id}}" class="form-control" rows="3"></textarea>
+                <textarea id="comment" class="form-control" rows="3"></textarea>
             </div>
             <div class="report-area">
                 <div class="location-warning text-center {{#if isLocationSelected}}hidden{{/if}}">
@@ -21,33 +25,28 @@
                 <h4 class="type">In order to add a new finding, please choose Fiducial <i class="fa fa-dot-circle-o" aria-hidden="true"></i> or AI Probe <i class="fa fa-magic" aria-hidden="true"></i> button from toolbar.</h4>
             </div>
         {{/if}}
-    </div>
-    <div class="{{#if or isFeedbackActive isAiModelActive}}hidden{{/if}}">
+    {{/if}}
+    {{#if isAiModelActive}}
+      <div id="ai-section">
         <hr style="margin-top:0;">
-        <div id="feedback-section">
-        </div>
-    </div>
-    <div class="{{#if not isAiModelActive}}hidden{{/if}}">
-        <hr style="margin-top:0;">
-        <div id="ai-section">
-          <form>
-              <div class="form-group">
-                  <label for="ai-models">Available Models</label>
-                  <select class="form-control ai-models js-aiModelName js-option" id="aiModelName">
-                      {{#each name in aiModelsName}}
-                          <option>{{ name }}</option>
-                      {{/each}}
-                  </select>
-              </div>
-          </form>
+        <form>
+            <div class="form-group">
+                <label for="ai-models">Available Models</label>
+                <select class="form-control ai-models js-aiModelName js-option" id="aiModelName">
+                    {{#each name in aiModelsName}}
+                        <option>{{ name }}</option>
+                    {{/each}}
+                </select>
+            </div>
+        </form>
+        <br>
+        <div class="{{#if not getNote}}hidden{{/if}}">
+          <p class="table-title">Note: <span class="note">{{getNote}}</span></p>
           <br>
-          <div class="{{#if not getNote}}hidden{{/if}}">
-            <p class="table-title">Note: <span class="note">{{getNote}}</span></p>
-            <br>
-          </div>
-          <p class="table-title">Model Specifications</p>
-          <div id="ai-model-info"></div>
         </div>
-    </div>
+        <p class="table-title">Model Specifications</p>
+        <div id="ai-model-info"></div>
+      </div>
+    {{/if}}
     <div id="snackbar">Model Selected</div>
 </template>
