--- a/packages/tesseract-report/client/components/measurementTable/measurementTableView/measurementTableView.styl
+++ b/packages/tesseract-report/client/components/measurementTable/measurementTableView/measurementTableView.styl
@@ -16,6 +16,9 @@
     padding-right: 20px
     font-weight: bold
 
+  .form-label
+    theme('color', '$defaultColor')
+
   .note
     theme('color', '$defaultColor')
     font-weight: normal
